manifests/03_Canary/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-preview
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: canary-demo
