manifests/03_Canary/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-stable
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: canary-demo
