manifests/03_Canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: canary-demo
