manifests/03_Canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: stable.dev.sample.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-demo
            port:
              number: 80
